<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_Title">Состав числа</string>
    <string name="str_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа.\nНеобходимо, чтобы сумма чисел двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. \n\nПример: В верхнем круге число 7, в ожном из нижних знак вопроса, в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому 3+4=7</string>
    <string name="btn_ok">Понятно</string>
    <string name="brain_image">brain image</string>
    <string name="choose_level">Выберите уровень</string>
    <string name="level_test">Тестовый</string>
    <string name="level_easy">Легкий</string>
    <string name="level_normal">Средний</string>
    <string name="level_hard">Сложный</string>
    <string name="question_mark">x</string>
    <string name="answers_progress">Правильных ответов: %d (минимум %d)</string>
    <string name="required_answers">Необходимое количество правильных ответов: %d</string>
    <string name="user_score">Ваш счет: %d</string>
    <string name="required_answers_percent">Необходимый процент правильных ответов: %d</string>
    <string name="user_score_percent">Процент правильных ответов: %d</string>
</resources>