<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_photo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/textViewChooseLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:text="@string/choose_level"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bth_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/textViewChooseLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/level_test"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/bth_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/green"
        android:layout_margin="20dp"
        android:text="@string/level_easy"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/bth_level_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bth_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/yellow"
        android:layout_margin="20dp"
        android:text="@string/level_normal"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/bth_level_easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bth_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/pink"
        android:layout_margin="20dp"
        android:text="@string/level_hard"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/bth_level_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>