<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/imageViewResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:src="@drawable/smile_good"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/required_answers"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewResult"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_user_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user_score"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers" />

    <TextView
        android:id="@+id/tv_required_answers_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/required_answers_percent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_score_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_score" />

    <TextView
        android:id="@+id/tv_user_score_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/user_score_percent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers_percent"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#9e7551"
        android:text="Попробовать снова"/>


</androidx.constraintlayout.widget.ConstraintLayout>